--- a/lib/pointing_poker_web/templates/home/index.html.eex
+++ b/lib/pointing_poker_web/templates/home/index.html.eex
@@ -1,5 +1,5 @@
-<div class="row">
 
-        <a href =/create_room><button type="button" class="btn btn-info">Create new session</button></a>
-
-</div>
+    <form action=/room method=post>
+      <input type="hidden" name="_csrf_token" value="<%= Plug.CSRFProtection.get_csrf_token() %>">
+      <button type="submit">Create new session</button>
+    </form>
