commit why it works, do not ask why

--- a/lib/pointing_poker_web/templates/room/vote.html.leex
+++ b/lib/pointing_poker_web/templates/room/vote.html.leex
@@ -3,8 +3,8 @@
     Vote, <%= @user%>
   </p>
 </div>
-<div class="row">
-  <p>
-  </p>
 
-</div>
+
+     <%=for user <- @user_list do%>
+     <div class="row"><%= @user%></div>
+     <% end %>
