--- a/lib/pointing_poker_web/templates/room/vote.html.leex
+++ b/lib/pointing_poker_web/templates/room/vote.html.leex
@@ -6,5 +6,5 @@
 
 
      <%=for user <- @user_list do%>
-     <div class="row"><%= @user%></div>
+     <td class="text_center"><%= @user%></td>
      <% end %>
