--- a/lib/pointing_poker_web/templates/room/join.html.leex
+++ b/lib/pointing_poker_web/templates/room/join.html.leex
@@ -3,7 +3,7 @@
 <div class="row">
   <div class = "col-sm-6 d-flex justify-content-left">
     Hello!
-    Nice meeting you, Stranger!
+    Welcome, Stranger!
   </div>
 </div>
 <br/>
