--- a/lib/pointing_poker_web/templates/room/vote.html.leex
+++ b/lib/pointing_poker_web/templates/room/vote.html.leex
@@ -1,18 +1,10 @@
 
+
 <div class="row">
-  <div class="col-sm-5 ">
-    <div class="btn-group-vertical">
-        <%=for row <- Enum.chunk_every(@enabled_votes, 3) do %>
-        <div class="btn-group btn-group-lg">
-          <%= for value <-row do %>
-            <button phx-click="vote" value="<%= value %>" class="btn btn-primary"><%= value %></button>
-            <% end %>
-          </div>
-          <% end %>
-    </div>
-  </div>
-  <div class="col-sm-7">
+  <div class="col-sm-6">
     <table class="table table-striped">
+      Hi <%= @user.username %>!
+      <br/>
       <thead>
         <tr>
           <th> Name </th>
@@ -32,5 +24,16 @@
       </tbody>
 
     </table>
+  </div>
+  <div class="col-sm-6 ">
+    <div class="btn-group-vertical">
+        <%=for row <- Enum.chunk_every(@enabled_votes, 3) do %>
+        <div class="btn-group btn-group-lg">
+          <%= for value <-row do %>
+            <button phx-click="vote" value="<%= value %>" class="btn btn-primary"><%= value %></button>
+            <% end %>
+          </div>
+          <% end %>
+    </div>
   </div>
 </div>
