before the refactor

--- a/lib/pointing_poker_web/templates/room/vote.html.leex
+++ b/lib/pointing_poker_web/templates/room/vote.html.leex
@@ -17,7 +17,7 @@
         <tr>
           <td class="text-center"> <%= member.username %></td>
           <td class="text-center">? </td>
-          <td class="text-center"> ? </td>
+          <td class="text-center"> <%= member.vote %> </td>
         <tr>
         <% end %>
 
