clear, without show

--- a/lib/pointing_poker_web/templates/room/vote.html.leex
+++ b/lib/pointing_poker_web/templates/room/vote.html.leex
@@ -32,6 +32,7 @@
 
     </table>
       <button phx-click="show_votes" class="btn btn-success">Show votes</button>
+      <button phx-click="clear_votes" class="btn btn-danger">Clear votes</button>
   </div>
   <div class="col-sm-6 ">
     <div class="btn-group-vertical">
